--- a/src/app/pages/admin/admin-packages/admin-packages.component.scss
+++ b/src/app/pages/admin/admin-packages/admin-packages.component.scss
@@ -80,10 +80,10 @@
 }
 
 .delete-link {
-    color: #dc3545; // Um tom de vermelho para perigo
+    color: #dc3545; 
 
     &:hover {
-      color: #c82333; // Vermelho um pouco mais escuro no hover
+      color: #c82333; 
     }
   }
 
