--- a/src/app/components/package-card/package-card.component.html
+++ b/src/app/components/package-card/package-card.component.html
@@ -11,7 +11,7 @@
   <div class="card-footer bg-transparent border-0 pt-0 pb-3">
     <div class="d-flex justify-content-between align-items-center">
       
-      <a [routerLink]="['/pacote', pacote.id]" class="fw-bold text-decoration-none details-link">Ver Mais +</a>
+      <a [routerLink]="['/packages', pacote.id]" class="fw-bold text-decoration-none details-link">Ver Mais +</a>
     </div>
   </div>
 </div>
