--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,18 +1,18 @@
 <div class="profile-page-container" *ngIf="user; else loading">
-  <!-- Coluna da Esquerda: Imagem de Perfil -->
+  
   <div class="profile-picture-container">
-    <img [src]="user.imageUrl || 'https://placehold.co/400x400/EFEFEF/333333?text=Perfil'" alt="Foto de Perfil" class="profile-picture">
+    <img [src]="user.imageUrl" alt="Foto de Perfil" class="profile-picture">
     
     <input type="file" #fileInput hidden (change)="onFileSelected($event)" accept="image/png, image/jpeg">
     
     <button class="btn-change-picture" (click)="fileInput.click()">Trocar Foto</button>
   </div>
 
-  <!-- Coluna da Direita: Cartão de Informações -->
+  
   <div class="profile-card">
-    <h2 class="profile-title">Meu Perfil</h2>
+    <h2 class="profile-title">Olá, {{ user.name }}!</h2>
 
-    <!-- MODO DE VISUALIZAÇÃO -->
+   
     <div *ngIf="!isEditing" class="details-view">
       <div class="info-group">
         <label>Nome Completo</label>
@@ -23,8 +23,8 @@
         <p class="email-field">{{ user.email }}</p>
       </div>
       <div class="info-group">
-        <label>Documento</label>
-        <p>{{ user.document }}</p>
+        <label>Data de Nascimento</label>
+        <p>{{ user.birthdate }}</p>
       </div>
       <div class="info-group">
         <label>Telefone</label>
@@ -32,14 +32,14 @@
       </div>
     </div>
 
-    <!-- MODO DE EDIÇÃO -->
+    
     <form *ngIf="isEditing" [formGroup]="profileForm" (ngSubmit)="onProfileSubmit()" class="edit-form">
       <div class="form-group">
         <label for="name">Nome Completo</label>
         <input id="name" type="text" formControlName="name" class="form-control">
       </div>
       <div class="form-group">
-        <label for="document">Documento</label>
+        <label for="document">Data de Nascimento</label>
         <input id="document" type="text" formControlName="document" class="form-control">
       </div>
       <div class="form-group">
@@ -48,7 +48,7 @@
       </div>
     </form>
     
-    <!-- Botões de Ação -->
+    
     <div class="profile-actions">
       <div *ngIf="!isEditing" class="view-actions">
         <a class="action-link-danger" (click)="deactivateAccount()">Excluir Perfil</a>
