criação de uma nova pagina para edição dos pacotes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     
     <!-- Coluna Esquerda -->
     <section class="footer-left">
-      <img src="assets/homepage/viajAvaLogoSVG.svg" alt="Logo da ViaJava" class="footer-logo mb-3">
+      <img src="assets/homepage/LOGO.png" alt="Logo da ViaJava" class="footer-logo mb-3">
       <p>O Café é por nossa conta!</p>
     </section>
 
