--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer-custom {
   background-color: var(--dark-blue);
-  color: white;
+  color:var(--primary-orange);
   padding: 20px;
 }
 
@@ -12,6 +12,7 @@
   max-width: 1200px;
   margin: 0 auto;
   gap: 20px;
+  color: var(--primary-orange);;
 }
 
 .footer-left,
