--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -25,10 +25,15 @@
   padding: 8px 16px;
   border-radius: 5px;
   transition: background-color 0.1s ease-in-out;
-  margin-right: 1rem;
+  margin-right: 3rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
 
   &:hover {
     background-color: #E65100;
+    transform: scale(1.1); /* Zoom ao passar o mouse */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Sombra mais forte no hover */
+
   }
 }
 
@@ -47,6 +52,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover; // Faz a imagem preencher o espaço sem distorcer
+    
   }
 
   // Estilo para o ícone SVG quando não há imagem
@@ -76,4 +82,16 @@
 }
 :host ::ng-deep .dropdown-divider {
   border-top: 1px solid rgba(15, 2, 2, 0.15);
+}
+.logo-header {
+  height: 60px;
+  width: 60px;
+ border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease; /* Transição para todas as mudanças */
+}
+
+.logo-header:hover {
+  transform: scale(1.1); /* Zoom ao passar o mouse */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Sombra mais forte no hover */
 }
