--- a/src/app/components/packages-layout/packages-layout.component.html
+++ b/src/app/components/packages-layout/packages-layout.component.html
@@ -1,8 +1,8 @@
 <section class="hero-section text-white text-center">
   <div class="hero-overlay"></div>
   <div class="container position-relative">
-    <h1 class="display-4 fw-bold">Sua Próxima Aventura com ViajAva</h1>
-    <p class="lead my-3">Explore destinos incríveis e viva experiências inesquecíveis.</p>
+    <h1 class="display-4 fw-bold">Sua Próxima Aventura com ViaJava</h1>
+    <p class="lead my-3">Onde cada viagem é uma nova versão da sua história.</p>
     <a href="#" class="btn btn-orange">Ver Pacotes</a>
   </div>
 </section>
