ajustes no painel admin/packages - metodos de add/edit/exc OK

--- a/src/app/components/admin-layout/admin-layout.component.html
+++ b/src/app/components/admin-layout/admin-layout.component.html
@@ -10,13 +10,13 @@
           </a>
         </li>
         <li>
-          <a routerLink="pacotes" routerLinkActive="active-link">
+          <a routerLink="packages" routerLinkActive="active-link">
             
             <img src="assets/icons/pack.svg" alt="Pacotes Icon">Pacotes
           </a>
         </li>
         <li>
-          <a routerLink="usuarios" routerLinkActive="active-link">
+          <a routerLink="users" routerLinkActive="active-link">
             
             <img src="assets/icons/group_user.svg" alt="Usuários Icon">Usuários
           </a>
