--- a/src/app/pages/packages-admin/packages-admin.component.html
+++ b/src/app/pages/packages-admin/packages-admin.component.html
@@ -6,7 +6,7 @@
 
   <header class="admin-header">
     <h1>Gerenciar Pacote</h1>
-    <a routerLink="/" class="btn btn-secondary">Voltar para a lista</a>
+    <a routerLink="/admin/packages" class="btn btn-secondary">Voltar para a lista</a>
   </header>
 
   <div class="package-content">
