ajustes na page header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,49 +8,42 @@
 
     <div class="d-flex align-items-center">
       <a class="nav-link text-white pacotes-link" routerLink="/">PACOTES</a>
-      <!--<a class="nav-link text-white pacotes-link" routerLink="/">SOBRE NÓS</a>
-
-      -->
+      
       <div *ngIf="currentUser$ | async as currentUser; else loggedOutMenu">
         
         <div ngbDropdown class="d-inline-block">
           
           <button class="btn btn-outline-light rounded-circle p-0 user-icon-button" ngbDropdownToggle>
             
+            <img 
+              *ngIf="currentUser.imageUrl && !imageLoadError" 
+              [src]="currentUser.imageUrl" 
+              alt="Foto de Perfil" 
+              class="profile-avatar"
+              (error)="imageLoadError = true">
             
-            <img *ngIf="currentUser.imageUrl" [src]="currentUser.imageUrl" alt="Foto de Perfil" class="profile-avatar">
-            
-            
-            <ng-container *ngIf="!currentUser.imageUrl">
-              <svg *ngIf="currentUser.role === 'ADMIN'" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-fill-gear header-user-icon" viewBox="0 0 16 16">
-                <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4m9.886-3.54c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0" />
-              </svg>
-              <svg *ngIf="currentUser.role !== 'ADMIN'" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-fill header-user-icon" viewBox="0 0 16 16">
-                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
-              </svg>
+            <ng-container *ngIf="!currentUser.imageUrl || imageLoadError">
+              <i class="bi bi-person-check-fill header-user-icon"></i>
             </ng-container>
 
           </button>
+
           <div ngbDropdownMenu class="dropdown-menu-end">
             <div class="px-3 py-2 text-muted">Bem-vindo, {{ currentUser.name }}</div>
             <div class="dropdown-divider"></div>
-
             <a ngbDropdownItem routerLink="/profile">Meu perfil</a>
-
             <ng-container *ngIf="currentUser.role === 'ADMIN'">
               <a ngbDropdownItem routerLink="/admin">Painel Administrativo</a>
             </ng-container>
             <ng-container *ngIf="currentUser.role !== 'ADMIN'">
               <a ngbDropdownItem routerLink="/my-reservations">Minhas reservas</a>
             </ng-container>
-
             <div class="dropdown-divider"></div>
             <button ngbDropdownItem (click)="onLogout()">Sair</button>
           </div>
         </div>
       </div>
 
-  
       <ng-template #loggedOutMenu>
         <div ngbDropdown class="d-inline-block">
           <button class="btn btn-outline-light rounded-circle p-0 user-icon-button" ngbDropdownToggle>
