--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,8 @@
   background-color: var(--primary-orange);
   padding: 8px 0; 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 0 0px 25px 25px;
+  
 }
 
 .navbar > .container {
