--- a/src/app/pages/packages-admin/packages-admin.component.scss
+++ b/src/app/pages/packages-admin/packages-admin.component.scss
@@ -144,7 +144,7 @@ textarea {
   gap: 16px; // Espaço entre os campos
 
   > .form-group {
-    flex: 1; // Faz com que cada campo ocupe metade do espaço
+    flex: 1; 
   }
 }
 
